syntax = "proto3";

import "google/protobuf/empty.proto";
import "dev/restate/ext.proto";

package greeter;

service Greeter {
  option (dev.restate.ext.service_type) = UNKEYED;

  rpc Greet(GreetingRequest) returns (GreetingResponse);
  rpc GetCount(google.protobuf.Empty) returns (CountResponse);
  rpc GreetStream(GreetingRequest) returns (stream CountResponse);
}

message GreetingRequest {
  string person = 1;
}

message GreetingResponse {
  string greeting = 1;
}

message CountResponse {
  int32 greetings = 1;
}

service AnotherGreeter {
  option (dev.restate.ext.service_type) = UNKEYED;

  rpc Greet(GreetingRequest) returns (GreetingResponse);
  rpc GetCount(google.protobuf.Empty) returns (CountResponse);
}